<?xml version="1.0"?>
<package format="2">
    <name>legged_controllers</name>
    <version>0.0.0</version>
    <description>The legged_controllers packages.</description>
    <maintainer email="liaoqiayuan@gmail.com">Qiayuan Liao</maintainer>
    <license>BSD</license>
    <author email="liaoqiayuan@gmail.com">Qiayuan Liao</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_clang_tools</build_depend>
    <depend>roscpp</depend>
    <depend>legged_common</depend>
    <depend>legged_interface</depend>
    <depend>legged_estimation</depend>
    <depend>legged_wbc</depend>

    <depend>controller_interface</depend>
    <depend>ocs2_legged_robot_ros</depend>
    <depend>ocs2_self_collision_visualization</depend>

    <depend>angles</depend>

    <exec_depend>controller_manager</exec_depend>

    <export>
        <controller_interface plugin="${prefix}/legged_controllers_plugins.xml"/>
    </export>
</package>
