<?xml version="1.0"?>
<package format="2">
    <name>legged_estimation</name>
    <version>0.0.0</version>
    <description>The legged_estimation packages.</description>
    <maintainer email="liaoqiayuan@gmail.com">Qiayuan Liao</maintainer>
    <license>BSD</license>
    <author email="liaoqiayuan@gmail.com">Qiayuan Liao</author>

    <!-- buildtool_depend: dependencies of the build process -->
    <buildtool_depend>catkin</buildtool_depend>
    <!-- depend: build, export, and execution dependency -->
    <depend>roscpp</depend>
    <depend>legged_common</depend>
    <depend>legged_interface</depend>

</package>
