<?xml version="1.0"?>
<package format="2">
    <name>qpoases_catkin</name>
    <version>0.0.0</version>
    <description>Catkin wrapper for qpoases.</description>
    <maintainer email="liaoqiayuan@gmail.com">Qiayuan Liao</maintainer>

    <license>See package</license>

    <buildtool_depend>catkin</buildtool_depend>

</package>
